[gd_scene load_steps=8 format=3 uid="uid://csou6e7y8p4dd"]

[ext_resource type="Script" uid="uid://duyu5es2h21ke" path="res://scripts/title_screen.gd" id="1_sa3yf"]
[ext_resource type="Texture2D" uid="uid://dxvy13knp1jx1" path="res://img/png/logo.png" id="2_s4lrb"]

[sub_resource type="LabelSettings" id="LabelSettings_v6p8y"]
font_size = 80
outline_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak2if"]

[sub_resource type="Animation" id="Animation_05l2w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ig5kc"]
resource_name = "title_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 3.3),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.93, 0.93)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 3.3),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ig5kc"]
_data = {
&"RESET": SubResource("Animation_05l2w"),
&"title_press": SubResource("Animation_ig5kc")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sa3yf")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.6
anchor_right = 0.68
anchor_bottom = 0.8
grow_horizontal = 2
button_mask = 7

[node name="CenterContainer" type="CenterContainer" parent="Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Play/CenterContainer"]
layout_mode = 2
text = "Play"
label_settings = SubResource("LabelSettings_v6p8y")

[node name="LogoButt" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.265
anchor_right = 0.5
anchor_bottom = 0.265
offset_left = -225.0
offset_top = -130.0
offset_right = 225.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ak2if")
action_mode = 0
button_mask = 3
flat = true

[node name="CenterContainer" type="CenterContainer" parent="LogoButt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="Sprite2D" parent="LogoButt/CenterContainer"]
position = Vector2(226, 135)
scale = Vector2(0.88, 0.88)
texture = ExtResource("2_s4lrb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../LogoButt")
libraries = {
&"": SubResource("AnimationLibrary_ig5kc")
}

[connection signal="pressed" from="Play" to="." method="enter_game"]
[connection signal="button_down" from="LogoButt" to="." method="press_title"]
[connection signal="button_up" from="LogoButt" to="." method="release_title"]
